--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,15 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+            <version>3.1.0.M1</version>
+        </dependency>
     </dependencies>
 
     <build>
