--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3333/employees?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.mvc.format.date=yyyy-MM-dd
